chore(aap): bump nimbus-jose-jwt 9.37.4 -> 10.9
10.x is source-compatible with 9.x for our usage. Replace
deprecated new URL(String) with URI.create(...).toURL() in
JwksConsumerKeyResolver. All 613 tests pass.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>